# ros_stereo_odo

./: CMakeLists.txt  README.md  package.xml
config/: simulation.yaml
include/: detect_features.h  optimize_pose.h  parameters.h  point_util.h  rectify_images.h  stereo_odometry.h  visualize.h
launch/: start_odo.launch
src/: detect_features.cpp  optimize_pose.cpp  parameters.cpp  point_util.cpp  rectify_images.cpp  stereo_odometry.cpp  visualize.cpp
